--- a/week 2-1-Layouts in JetpackCompose/LayoutsinJetpackCompose/app/build.gradle
+++ b/week 2-1-Layouts in JetpackCompose/LayoutsinJetpackCompose/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc01"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
